--- a/translations/kangyur/translations/060-009_toh180-the_sutra_teaching_how_all_phenomena_are_without_any_origin.xml
+++ b/translations/kangyur/translations/060-009_toh180-the_sutra_teaching_how_all_phenomena_are_without_any_origin.xml
@@ -4,17 +4,15 @@
         <teiHeader>
                 <fileDesc><!-- NEW -->
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">chos thams cad ’byung ba med par bstan pa</title>
-                                <title type="mainTitle" xml:lang="Sa-Ltn">Sarva­dharmāpravṛtti­nirdeśa</title>
                                 <title type="mainTitle" xml:lang="en">Teaching How All Phenomena Are without Origin</title>
+                                <title type="mainTitle" xml:lang="Sa-Ltn">Sarva­dharmāpravṛtti­nirdeśa</title>
                                 <title type="mainTitle" xml:lang="bo">ཆོས་ཐམས་ཅད་འབྱུང་བ་མེད་པར་བསྟན་པ།</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa chos thams cad ’byung ba med par bstan pa zhes bya ba theg pa chen
-                                        po’i mdo</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">chos thams cad ’byung ba med par bstan pa</title>
+                                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “Teaching How All Phenomena Are without Origin”</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­sarva­dharmāpravṛtti­nirdeśa­nāma­mahāyāna­sūtra</title>
                                 <title type="longTitle" xml:lang="bo">འཕགས་པ་ཆོས་ཐམས་ཅད་འབྱུང་བ་མེད་པར་བསྟན་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “Teaching How All Phenomena Are without
-                                        Origin”</title>
-                                <title type="otherTitle" xml:lang="zh"/>
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa chos thams cad ’byung ba med par bstan pa zhes bya ba theg pa chen po’i mdo</title>
+                                <title type="otherTitle" xml:lang="zh">《一切法無生經》（大正藏：《佛說諸法本無經》）</title>
                                 <author role="translatorMain" ref="contributors.xml#team-9">Translated by the Dharmachakra Translation Committee<lb/>under
                                         the patronage and supervision of 84000: Translating the Words of the Buddha</author>
                                 <editor role="externalReviewer" ref="contributors.xml#person-262">David Higgins</editor>
@@ -30,7 +28,7 @@
                                 <editor role="finalReviewer" ref="contributors.xml#person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.1.5 <date>2022</date>
+                <edition>v 1.1.6 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -64,8 +62,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-04-15T20:00:12.432Z" user="admin">15/04/2022 20:00:12</note>
-
+                                <note type="lastUpdated" date-time="2022-07-26T06:23:35.004Z" user="admin">26/07/2022 06:23:35</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                                         version increment</note>
                                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:15:45.117Z" user="mike">2.d</note>
@@ -89,22 +86,22 @@
                                 <note type="updated" update="translation-status" value="2.a" date-time="2021-05-13T10:22:53.625Z" user="mike">2.a</note>
                                 <note type="updated" update="text-version" value="0.0.8" date-time="2021-05-13T10:22:53.625Z" user="mike">Auto
                                         (update-publication-status)</note>
-
                                 <note type="updated" update="translation-status" value="2" date-time="2021-05-17T20:34:30.879Z" user="mike">2</note>
                                 <note type="updated" update="text-version" value="0.1.2" date-time="2021-05-17T20:34:30.879Z" user="mike">Auto
                                         (update-publication-status)</note>
-                        
-    <note type="updated" update="text-version" value="0.1.3" date-time="2021-06-11T06:45:31.275Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="1" date-time="2021-06-11T20:37:23.972Z" user="mike">1</note>
-    <note type="updated" update="text-version" value="1.0.0" date-time="2021-06-11T20:37:23.972Z" user="mike">First published version</note>
-    <note type="updated" update="text-version" value="1.0.1" date-time="2021-07-15T00:11:44.915Z" user="konchog">More than 150 fixes made throughout, documented in an email. More review needed by editorial beofre final publication.</note>
-    <note type="updated" update="text-version" value="1.0.2" date-time="2021-07-17T02:13:37.036Z" user="celso">two very minor markup edits</note>
-    <note type="updated" update="text-version" value="1.0.3" date-time="2021-07-19T14:43:24.584Z" user="konchog">Several more small fixes, documented in correspondence with Ryan and editorial.</note>
-    <note type="updated" update="text-version" value="1.1.1" date-time="2021-07-20T10:50:20.364Z" user="john">Small changes to summary, and to 1.97-99, and addition of theme-break spaces.</note>
-    <note type="updated" update="text-version" value="1.1.2" date-time="2021-07-31T05:50:13.347Z" user="mike">Wiesiek skt typos corrected</note>
-    <note type="updated" update="text-version" value="1.1.3" date-time="2021-08-01T21:56:26.556Z" user="mike">typo fixed</note>
-    <note type="updated" update="text-version" value="1.1.4" date-time="2021-10-27T09:02:00.656Z" user="andre">Definition of four concentrations replaced</note>    <note type="updated" update="text-version" value="1.1.5" date-time="2022-04-15T20:00:08.682Z" user="celso">Corrected a few errors that were revealed from the TM alignment.</note>
-            </notesStmt>
+                                <note type="updated" update="text-version" value="0.1.3" date-time="2021-06-11T06:45:31.275Z" user="line-tofte">Auto (update-contributors)</note>
+                                <note type="updated" update="translation-status" value="1" date-time="2021-06-11T20:37:23.972Z" user="mike">1</note>
+                                <note type="updated" update="text-version" value="1.0.0" date-time="2021-06-11T20:37:23.972Z" user="mike">First published version</note>
+                                <note type="updated" update="text-version" value="1.0.1" date-time="2021-07-15T00:11:44.915Z" user="konchog">More than 150 fixes made throughout, documented in an email. More review needed by editorial beofre final publication.</note>
+                                <note type="updated" update="text-version" value="1.0.2" date-time="2021-07-17T02:13:37.036Z" user="celso">two very minor markup edits</note>
+                                <note type="updated" update="text-version" value="1.0.3" date-time="2021-07-19T14:43:24.584Z" user="konchog">Several more small fixes, documented in correspondence with Ryan and editorial.</note>
+                                <note type="updated" update="text-version" value="1.1.1" date-time="2021-07-20T10:50:20.364Z" user="john">Small changes to summary, and to 1.97-99, and addition of theme-break spaces.</note>
+                                <note type="updated" update="text-version" value="1.1.2" date-time="2021-07-31T05:50:13.347Z" user="mike">Wiesiek skt typos corrected</note>
+                                <note type="updated" update="text-version" value="1.1.3" date-time="2021-08-01T21:56:26.556Z" user="mike">typo fixed</note>
+                                <note type="updated" update="text-version" value="1.1.4" date-time="2021-10-27T09:02:00.656Z" user="andre">Definition of four concentrations replaced</note>
+                                <note type="updated" update="text-version" value="1.1.5" date-time="2022-04-15T20:00:08.682Z" user="celso">Corrected a few errors that were revealed from the TM alignment.</note>
+                            <note type="updated" update="text-version" value="1.1.6" date-time="2022-07-26T06:23:27.199Z" user="cabie-sim">Auto (update-titles)</note>
+                        </notesStmt>
                 </fileDesc>
         </teiHeader>
         <text>
