--- a/translations/kangyur/translations/061-003_toh183-the_teaching_on_the_benefits_of_generosity.xml
+++ b/translations/kangyur/translations/061-003_toh183-the_teaching_on_the_benefits_of_generosity.xml
@@ -4,15 +4,15 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">sbyin pa’i phan yon bstan pa</title>
-                                <title type="mainTitle" xml:lang="bo">སྦྱིན་པའི་ཕན་ཡོན་བསྟན་པ།</title>
                                 <title type="mainTitle" xml:lang="en">Teaching the Benefits of Generosity</title>
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Dānānuśaṃsā­nirdeśa</title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་སྦྱིན་པའི་ཕན་ཡོན་བསྟན་པ།</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa sbyin pa’i phan yon bstan pa</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">sbyin pa’i phan yon bstan pa</title>
+                                <title type="mainTitle" xml:lang="bo">སྦྱིན་པའི་ཕན་ཡོན་བསྟན་པ།</title>
                                 <title type="longTitle" xml:lang="en">The Noble “Teaching the Benefits of Generosity”</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­dānānuśaṃsā­nirdeśa</title>
-                                <title type="otherTitle" xml:lang="zh"/>
+                                <title type="longTitle" xml:lang="bo">འཕགས་པ་སྦྱིན་པའི་ཕན་ཡོན་བསྟན་པ།</title>
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa sbyin pa’i phan yon bstan pa</title>
+                                <title type="otherTitle" xml:lang="zh">《布施利益經》（大正藏：《佛說布施經》）</title>
                                 <author role="translatorMain" ref="contributors.xml#team-27">
                                         Translated by the Sakya Pandita Translation Group<lb/>
                                         under the patronage and supervision of 84000: Translating the Words of the Buddha</author>
@@ -26,7 +26,7 @@
                                 <consultant role="advisor" ref="contributors.xml#person-364">Venerable Bhiksuni Heng-Ching Shih</consultant>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.1.2 <date>2021</date>
+                <edition>v 1.1.4 <date>2021</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -61,10 +61,9 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2021-11-22T16:04:23.003Z" user="admin">22/11/2021 16:04:23</note>
+                                <note type="lastUpdated" date-time="2022-07-26T06:27:16.2Z" user="admin">26/07/2022 06:27:16</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:44:26.954Z" user="admin">Automated version
                                         increment</note>
-
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2020-03-06T13:15:21.681Z" user="line-tofte">v 0.0.1</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-05-11T14:41:43.472Z" user="line-tofte">2.h</note>
                                 <note type="updated" update="translation-status" value="2.g" date-time="2021-04-22T13:04:54.764Z" user="line-tofte">2.g</note>
@@ -93,20 +92,19 @@
                                 <note type="updated" update="translation-status" value="2.a" date-time="2021-05-26T09:08:23.113Z" user="mike">2.a</note>
                                 <note type="updated" update="text-version" value="0.0.11" date-time="2021-05-26T09:08:23.113Z" user="mike">Auto
                                         (update-publication-status)</note>
-                        
-    <note type="updated" update="translation-status" value="2" date-time="2021-05-31T05:29:09.402Z" user="mike">2</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-31T05:29:09.402Z" user="mike">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-08-04T12:50:01.604Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-08-04T12:51:40.269Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="1" date-time="2021-08-06T12:08:50.366Z" user="mike">1</note>
-    <note type="updated" update="text-version" value="1.0.0" date-time="2021-08-06T12:08:50.366Z" user="mike">First published version </note>
-    <note type="updated" update="text-version" value="1.0.1" date-time="2021-09-22T05:53:34.197Z" user="mike">typo corrected </note>
-    <note type="updated" update="text-version" value="1.0.2" date-time="2021-11-18T23:27:08.147Z" user="john">Added references to the Sanskrit texts and to corresponding translations.</note>
-
-    <note type="updated" update="text-version" value="1.1.1" date-time="2021-11-21T20:16:57.137Z" user="john">Further small edits</note>
-
-    <note type="updated" update="text-version" value="1.1.2" date-time="2021-11-22T16:04:19.203Z" user="celso">added references to Peter Skillings 2021 anthology</note>
-</notesStmt>
+                                <note type="updated" update="translation-status" value="2" date-time="2021-05-31T05:29:09.402Z" user="mike">2</note>
+                                <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-31T05:29:09.402Z" user="mike">Auto (update-publication-status)</note>
+                                <note type="updated" update="text-version" value="0.0.3" date-time="2021-08-04T12:50:01.604Z" user="line-tofte">Auto (update-contributors)</note>
+                                <note type="updated" update="text-version" value="0.0.4" date-time="2021-08-04T12:51:40.269Z" user="line-tofte">Auto (update-contributors)</note>
+                                <note type="updated" update="translation-status" value="1" date-time="2021-08-06T12:08:50.366Z" user="mike">1</note>
+                                <note type="updated" update="text-version" value="1.0.0" date-time="2021-08-06T12:08:50.366Z" user="mike">First published version </note>
+                                <note type="updated" update="text-version" value="1.0.1" date-time="2021-09-22T05:53:34.197Z" user="mike">typo corrected </note>
+                                <note type="updated" update="text-version" value="1.0.2" date-time="2021-11-18T23:27:08.147Z" user="john">Added references to the Sanskrit texts and to corresponding translations.</note>
+                                <note type="updated" update="text-version" value="1.1.1" date-time="2021-11-21T20:16:57.137Z" user="john">Further small edits</note>
+                                <note type="updated" update="text-version" value="1.1.2" date-time="2021-11-22T16:04:19.203Z" user="celso">added references to Peter Skillings 2021 anthology</note>
+                                <note type="updated" update="text-version" value="1.1.3" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                            <note type="updated" update="text-version" value="1.1.4" date-time="2022-07-26T06:27:08.48Z" user="cabie-sim">Auto (update-titles)</note>
+                        </notesStmt>
                 </fileDesc>
         </teiHeader>
         <text>
@@ -442,15 +440,14 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-061-003-74">
-                                                        <term>thirty-two marks of a great being</term>
-                                                        <term xml:lang="Bo-Ltn">skye bu chen po’i mtshan sum cu rtsa gnyis </term>
-                                                        <term xml:lang="bo">སྐྱེ་བུ་ཆེན་པོའི་མཚན་སུམ་ཅུ་རྩ་གཉིས།</term>
-                                                <term xml:lang="Sa-Ltn">dvātriṃśa­mahā­puruṣa­lakṣaṇa</term>
-                                                        <term type="definition">The main identifying physical characteristics of both buddhas and universal
-                                                                monarchs, to which are added the eighty excellent signs.</term>
-                                                        <term type="alternative">thirty-two marks</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-061-003-74" type="term" mode="match">
+                            <term>thirty-two marks of a great being</term>
+                            <term xml:lang="Bo-Ltn">skyes bu chen po’i mtshan sum cu rtsa gnyis</term>
+                            <term xml:lang="bo">སྐྱེས་བུ་ཆེན་པོའི་མཚན་སུམ་ཅུ་རྩ་གཉིས།</term>
+                            <term xml:lang="Sa-Ltn">dvātriṃśa­mahā­puruṣa­lakṣaṇa</term>
+                            <term type="alternative">thirty-two marks</term>
+                            <term type="definition">The main identifying physical characteristics of both buddhas and universal monarchs, to which are added the eighty excellent signs.</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss xml:id="UT22084-061-003-75" type="term" mode="match">
