--- a/translations/kangyur/placeholders/081-011_toh442-guhyasamaja.xml
+++ b/translations/kangyur/placeholders/081-011_toh442-guhyasamaja.xml
@@ -4,18 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">gsang ba 'dus pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">guhyasamāja</title>
                 <title type="mainTitle" xml:lang="en">Guhyasamāja</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">guhyasamāja</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">gsang ba 'dus pa/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">sarvatathāgata­kāyavākcittarahasyaguhyasamāja­nāmamahākalparāja</title>
+                <title type="otherTitle" xml:lang="zh">《最上秘密大教王經》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi sku gsung thugs kyi gsang chen gsang ba 'dus pa zhes bya ba brtag pa'i rgyal po chen po/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">sarvatathāgata­kāyavākcittarahasyaguhyasamāja-nāmamahākalparāja</title>
-                <title type="otherTitle" xml:lang="zh">最上秘密大教王經</title>
                 <author role="translatorMain" ref="contributors.xml#team-55"/>
                 <author role="translatorEng" ref="contributors.xml#person-7">Paul Hackett</author>
                 <sponsor ref="sponsors.xml#sponsor-44">Anonymous</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.6 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -34,14 +34,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-01T10:04:15.386Z" user="admin">01/09/2021 10:04:15</note>
-            
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-19T10:45:57.084Z" user="admin">0.0.2</note>
-    <note type="updated" update="publication-date" value="" date-time="2020-08-19T10:45:57.084Z" user="admin"/>
-    <note type="updated" update="translation-status" value="3" date-time="2021-05-19T13:44:55.712Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-19T13:44:55.712Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-19T13:45:22.735Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-09-01T10:04:09.964Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:24:01.76Z" user="admin">26/07/2022 07:24:01</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-19T10:45:57.084Z" user="admin">0.0.2</note>
+                <note type="updated" update="publication-date" value="" date-time="2020-08-19T10:45:57.084Z" user="admin"/>
+                <note type="updated" update="translation-status" value="3" date-time="2021-05-19T13:44:55.712Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-19T13:44:55.712Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-19T13:45:22.735Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-09-01T10:04:09.964Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-07-26T07:23:54.091Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
