--- a/translations/kangyur/placeholders/081-014_toh445-the_garland_of_vajras.xml
+++ b/translations/kangyur/placeholders/081-014_toh445-the_garland_of_vajras.xml
@@ -4,17 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rdo rje 'phreng ba'i rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">vajramālābhidhānamahāyogatantra­sarvatantrahṛdayarahasyavibhaṅga</title>
                 <title type="mainTitle" xml:lang="en">The Garland of Vajras</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">rnal 'byor chen po'i rgyud dpal rdo rje 'phreng ba mngon par brjod pa rgyud thams cad kyi snying po gsang ba rnam par phye ba zhes bya ba/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">vajramālābhidhānamahāyogatantra­sarvatantrahṛdayarahasyavibhaṅga</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rdo rje 'phreng ba'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīvajramālābhidhāna­mahāyogatantrasarva­tantrahṛdayarahasyavibhaṅganāma</title>
-            <title type="otherTitle" xml:lang="zh">吉祥金剛鬘</title>
+                <title type="otherTitle" xml:lang="zh">《吉祥金剛鬘》</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">rnal 'byor chen po'i rgyud dpal rdo rje 'phreng ba mngon par brjod pa rgyud thams cad kyi snying po gsang ba rnam par phye ba zhes bya ba/</title>
                 <author role="translatorMain" ref=""/>
-            <sponsor ref="sponsors.xml#sponsor-45">Herlintje, Lina Herlintje, Hadi Widjaja, Ocean Widjaja, Asia Widjaja, Star Widjaja, Gold Widjaja</sponsor>
+                <sponsor ref="sponsors.xml#sponsor-45">Herlintje, Lina Herlintje, Hadi Widjaja, Ocean Widjaja, Asia Widjaja, Star Widjaja, Gold Widjaja</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>0.0.2 <date>2020</date>
+                <edition>v 0.0.3 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="">
@@ -33,10 +33,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 13/02/2019 at 08:55:56 by admin</note>
-            
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-19T10:46:36.064Z" user="admin">0.0.2</note>
-    <note type="updated" update="publication-date" value="" date-time="2020-08-19T10:46:36.064Z" user="admin"/>
+                <note type="lastUpdated" date-time="2022-07-26T07:24:55.45Z" user="admin">26/07/2022 07:24:55</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-19T10:46:36.064Z" user="admin">0.0.2</note>
+                <note type="updated" update="publication-date" value="" date-time="2020-08-19T10:46:36.064Z" user="admin"/>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-26T07:24:53.445Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
