--- a/translations/kangyur/placeholders/085-002_toh482-the_great_sovereign_of_practices_the_victory_over_the_three_worlds.xml
+++ b/translations/kangyur/placeholders/085-002_toh482-the_great_sovereign_of_practices_the_victory_over_the_three_worlds.xml
@@ -4,19 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">'jig rten gsum las rgyal ba'i rtog pa'i rgyal po chen po/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">trailokyavijayakalpa</title>
                 <title type="mainTitle" xml:lang="en">The Great Sovereign of Practices, the Victory Over the Three Worlds</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'jig rten gsum las rnam par rgyal ba rtog pa'i rgyal po chen po/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">trailokyavijayakalpa</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">'jig rten gsum las rgyal ba'i rtog pa'i rgyal po chen po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">trailokyavijayamahākalparāja</title>
-                <title type="otherTitle" xml:lang="zh">普勝三界品之王</title>
+                <title type="otherTitle" xml:lang="zh">《普勝三界品之王》</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'jig rten gsum las rnam par rgyal ba rtog pa'i rgyal po chen po/</title>
                 <author role="translatorMain" ref="contributors.xml#team-30"/>
-            <sponsor ref="sponsors.xml#sponsor-23">Yi Jin &amp; Carlo Imo</sponsor>
                 <author role="translatorEng" ref="contributors.xml#person-190">Steven Weinberger</author>
-    <consultant role="projectManager" ref="contributors.xml#person-190">Steven Weinberger</consultant>
+                <consultant role="projectManager" ref="contributors.xml#person-190">Steven Weinberger</consultant>
+                <sponsor ref="sponsors.xml#sponsor-23">Yi Jin &amp; Carlo Imo</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -36,9 +36,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-04-24T13:40:10.446Z" user="admin">24/04/2020 13:40:10</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:25:42.919Z" user="admin">26/07/2022 07:25:42</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T07:25:35.28Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
