--- a/translations/kangyur/placeholders/086-005_toh494-the_tantra_of_the_complete_enlightenment_of_vairocana.xml
+++ b/translations/kangyur/placeholders/086-005_toh494-the_tantra_of_the_complete_enlightenment_of_vairocana.xml
@@ -4,22 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rnam par snang mdzad mngon par rdzogs par byang chub pa'i rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">vairocanābhisambodhi</title>
                 <title type="mainTitle" xml:lang="en">The Tantra of the Complete Enlightenment of Vairocana</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">mdo sde'i chos kyi rnam grangs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">vairocanābhisambodhi</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rnam par snang mdzad mngon par rdzogs par byang chub pa'i rgyud/</title>
                 <title type="otherTitle" xml:lang="en">The Dharma Discourse Consisting in the Sūtra on the Enlightenment of Mahāvairocana</title>
+                <title type="otherTitle" xml:lang="en">The Dharma Discourse Consisting in the Sūtra [on the Enlightenment of Mahāvairocana]</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">mahāvairocanābhisaṃbodhi­vikurvitādhiṣṭhāna­vaipulyasūtrendrarāja­dharmaparyāya</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">mahāvairocanābhisaṃbodhi­vikurvitādhiṣṭhānavaipulya­sūtrendrarāja­nāmadharmaparyāya</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rnam par snang mdzad chen po mngon par rdzogs par byang chub pa rnam par sprul pa byin gyis rlob pa shin tu rgyas pa mdo sde dbang po'i rgyal po zhes bya ba'i chos kyi rnam grangs/</title>
+                <title type="otherTitle" xml:lang="zh">​​​​《毘盧遮那現前圓滿證覺續》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">mdo sde'i chos kyi rnam grangs/</title>
-                <title type="otherTitle" xml:lang="en">The Dharma Discourse Consisting in the Sūtra [on the Enlightenment of Mahāvairocana]</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">mahāvairocanābhisaṃbodhi­vikurvitādhiṣṭhāna-vaipulyasūtrendrarāja­dharmaparyāya</title>
-                <title type="otherTitle" xml:lang="zh">​​​​毘盧遮那現前圓滿證覺續</title>
-            
-<sponsor ref="sponsors.xml#sponsor-187">Chen Sin I and family</sponsor>
+                <sponsor ref="sponsors.xml#sponsor-187">Chen Sin I and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>0.0.1 <date>2020</date>
+                <edition>v 0.0.2 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -40,10 +38,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-02-08T23:23:26.769Z" user="amy">08/02/2020 23:23:26</note>
-            
-<note type="updated" update="text-version" value="0.0.1" date-time="2020-03-05T15:09:37.921Z" user="line-tofte">0.0.1</note>
-<note type="updated" update="translation-status" value="0" date-time="2020-03-05T15:09:37.921Z" user="line-tofte"/>
+                <note type="lastUpdated" date-time="2022-07-26T07:26:27.419Z" user="admin">26/07/2022 07:26:27</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-05T15:09:37.921Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="0" date-time="2020-03-05T15:09:37.921Z" user="line-tofte"/>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T07:26:25.417Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
