--- a/translations/kangyur/placeholders/087-007_toh502-the_sovereign_tantra_orderly_arrangement_of_the_three_vows.xml
+++ b/translations/kangyur/placeholders/087-007_toh502-the_sovereign_tantra_orderly_arrangement_of_the_three_vows.xml
@@ -8,14 +8,14 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">trisamayavyūhatantra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dam tshig gsum bkod pa'i rgyal po'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">trisamayavyūharājanāmatantra</title>
-                <title type="otherTitle" xml:lang="zh">三誓言莊嚴續王</title>
+                <title type="otherTitle" xml:lang="zh">《三誓言莊嚴續王》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dam tshig gsum bkod pa'i rgyal po zhes bya ba'i rgyud/</title>
                 <author role="translatorMain" ref="eft:team-55"/>
                 <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
                 <sponsor ref="sponsors.xml#sponsor-205">Zhang Xu Lei Family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.2 <date>2019</date>
+                <edition>v 0.1.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -36,12 +36,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-01-11T13:14:58.03Z" user="admin">11/01/2022 13:14:58</note>
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:04:21.723Z" user="john">v 0.1.0</note>
-<note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:04:21.723Z" user="john">3</note>
-    <note type="updated" update="text-version" value="v 0.1.1" date-time="2020-08-19T10:47:53.92Z" user="admin">v 0.1.1</note>
-    <note type="updated" update="text-version" value="0.1.2" date-time="2022-01-11T13:14:54.133Z" user="line-tofte">Auto (update-contributors)</note>
-</notesStmt>
+                <note type="lastUpdated" date-time="2022-07-26T07:27:17.837Z" user="admin">26/07/2022 07:27:17</note>
+                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:04:21.723Z" user="john">v 0.1.0</note>
+                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:04:21.723Z" user="john">3</note>
+                <note type="updated" update="text-version" value="v 0.1.1" date-time="2020-08-19T10:47:53.92Z" user="admin">v 0.1.1</note>
+                <note type="updated" update="text-version" value="0.1.2" date-time="2022-01-11T13:14:54.133Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.3" date-time="2022-07-26T07:27:10.202Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
